# gamma-skill-studio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  config.yaml  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/simple_2dof/: simple_2dof.urdf
config/: skill_catalog.yaml
motions/: sample_wave.csv
scripts/: fetch_g1_urdf.sh  gen_sample_motion.py
server/: __main__.py  adjustments.py  app.py  catalog.py  config.py  csv_io.py  editor.py  fs.py  presets.py  urdf_rewrite.py
server/plugins/: __init__.py  protomotions_build.py
tests/: conftest.py  test_adjustments.py  test_api.py  test_api_catalog.py  test_build.py  test_catalog.py  test_csv_io.py  test_editor.py  test_presets.py  test_smoke.py  test_urdf_rewrite.py
web/: index.html  main.js  style.css
web/modules/: animator.js  api.js  csv.js  editPanel.js  form-adjustments.js  fsPicker.js  library.js  scene.js  timeline.js  urdf.js
